--- a/src/themes/rubentan/layouts/index.html
+++ b/src/themes/rubentan/layouts/index.html
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
-<head>
-    <meta charset="utf-8">
-
-    {{ partial "meta.html" . }}
-
-    <base href="{{ .Site.BaseURL }}">
-    <title>{{ .Site.Title }}</title>
-    <link rel="canonical" href="{{ .Permalink }}">
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-
-    {{ partial "head_includes.html" . }}
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+{{ partial "header.html" . }}
 
 <!-- Header -->
 <!-- Navigation -->
@@ -55,7 +33,7 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="/img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
           <p>I am a technologist with more than 15 years of professional software development experience, primarily focused in the domains of backend services, distributed computing and system architecture.</p>
@@ -76,6 +54,9 @@
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
+          {{ range first 10 .Data.Pages }}
+            {{ .Render "summary"}}
+          {{ end }}
           <li>
             <div class="timeline-image">
               <h4>11 Dec 2016</h4>
