--- a/src/themes/rubentan/layouts/index.html
+++ b/src/themes/rubentan/layouts/index.html
@@ -54,23 +54,9 @@
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
-          {{ range first 10 .Data.Pages }}
+          {{ range first 10 .Data.Pages.ByDate }}
             {{ .Render "summary"}}
           {{ end }}
-          <li>
-            <div class="timeline-image">
-              <h4>11 Dec 2016</h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Tabletop Games</h4>
-                <h4 class="subheading">Keeping It Simple</h4>
-              </div>
-              <div class="timeline-body">
-                <p>In this post I talk about how game rules should be simplified whenever possible, and offer a glimsp of how it works in my game.</p>
-              </div>
-            </div>
-          </li>
         </ul>
       </div>
     </div>
