Moved techut to tech

--- a/src/themes/rubentan/layouts/_default/single.html
+++ b/src/themes/rubentan/layouts/_default/single.html
@@ -15,7 +15,7 @@
           <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="/">Back to Main</a> </li>
-          <li> <a class="page-scroll" href="/techut">On Tech...</a> </li>
+          <li> <a class="page-scroll" href="/tech">On Tech...</a> </li>
           <li> <a class="page-scroll" href="/gaming">On Gaming...</a> </li>
           <li> <a class="page-scroll" href="/life">On Life...</a> </li>
         </ul>
