--- a/src/themes/rubentan/static/css/style.css
+++ b/src/themes/rubentan/static/css/style.css
@@ -42,11 +42,11 @@ p.intro {
 	font-family: 'Open Sans', sans-serif;
 }
 a {
-	color: #333;
+	color: rgb(100, 180, 100);
 }
 a:hover, a:focus {
 	text-decoration: none;
-	color: #7bc3d1;
+	color: rgb(80, 100, 50);
 }
 ul, ol {
 	list-style: none;
