--- a/css/style.css
+++ b/css/style.css
@@ -479,18 +479,18 @@ ol.type li a:hover {
 	font-size: 14px;
 	text-transform: uppercase;
 }
-.timeline>li.timeline-inverted>.timeline-panel {
+.timeline>li:nth-child(even)>.timeline-panel {
 	float: right;
 	padding: 0 20px 0 100px;
 	text-align: left;
 }
-.timeline>li.timeline-inverted>.timeline-panel:before {
+.timeline>li:nth-child(even)>.timeline-panel:before {
 	right: auto;
 	left: -15px;
 	border-right-width: 15px;
 	border-left-width: 0;
 }
-.timeline>li.timeline-inverted>.timeline-panel:after {
+.timeline>li:nth-child(even)>.timeline-panel:after {
 	right: auto;
 	left: -14px;
 	border-right-width: 14px;
@@ -696,7 +696,7 @@ header .intro-text {
 	line-height: 18px;
 	font-weight: 400;
 }
-.timeline>li.timeline-inverted>.timeline-panel {
+.timeline>li:nth-child(even)>.timeline-panel {
 	float: right;
 	padding: 0 30px 20px 20px;
 	text-align: left;
@@ -723,7 +723,7 @@ header .intro-text {
 	font-size: 18px;
 	line-height: 26px;
 }
-.timeline>li.timeline-inverted>.timeline-panel {
+.timeline>li:nth-child(even)>.timeline-panel {
 	padding: 0 20px 20px;
 }
 }
@@ -744,7 +744,7 @@ header .intro-text {
 	margin-top: 40px;
 	font-weight: 400;
 }
-.timeline>li.timeline-inverted>.timeline-panel {
+.timeline>li:nth-child(even)>.timeline-panel {
 	padding: 10px 100px 20px 20px;
 }
 }
