--- a/src/themes/rubentan/layouts/_default/summary.html
+++ b/src/themes/rubentan/layouts/_default/summary.html
@@ -4,7 +4,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>{{ range .Params.types }} {{ . }} {{ end }}</h4>
+                <h4>{{ .Section }}</h4>
                 <h4 class="subheading"><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
               </div>
               <div class="timeline-body">
