--- a/src/themes/rubentan/static/css/style.css
+++ b/src/themes/rubentan/static/css/style.css
@@ -75,7 +75,7 @@ ul, ol {
 }
 hr {
 	height: 4px;
-	width: 70px;
+	width: 3em;
 	text-align: center;
 	position: relative;
 	background: #7bc3d1;
@@ -83,6 +83,7 @@ hr {
 	margin-bottom: 30px;
 	border: 0;
 }
+
 /* Navigation */
 #nav {
 	z-index: 9999;
@@ -781,6 +782,22 @@ header .intro-text {
 
 #single p {
 	margin-top: 0;
-	margin-bottom: 2.5em;
+	margin-bottom: 2em;
 	line-height: 2em;
+}
+
+#single blockquote {
+	margin-top: -1em;
+	background: rgb(230, 230, 230);
+	border: 1px solid rgb(200, 200, 200);
+}
+
+#single blockquote p:last-of-type {
+	margin-bottom: 0;
+}
+
+#single ul li {
+	list-style-type: square;
+	line-height: 2em;
+	margin-bottom: 1em;
 }
