Updated obsidian world article

--- a/src/themes/rubentan/layouts/partials/meta.html
+++ b/src/themes/rubentan/layouts/partials/meta.html
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Ruben Tan is a blog dedicated to technology and things I am interested in. And cats.">
+<meta name="description" content="{{ .Description }}">
 <meta name="author" content="Ruben Tan">
