--- a/src/themes/rubentan/static/css/style.css
+++ b/src/themes/rubentan/static/css/style.css
@@ -796,8 +796,16 @@ header .intro-text {
 	margin-bottom: 0;
 }
 
+#single ul {
+	margin-left: 2em;
+}
+
 #single ul li {
 	list-style-type: square;
 	line-height: 2em;
 	margin-bottom: 1em;
+}
+
+#single ul li:last-child {
+	margin-bottom: 2em;
 }
