--- a/src/themes/rubentan/layouts/index.html
+++ b/src/themes/rubentan/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Ruben "RogueJS" Tan</a> </div>
+        <a class="navbar-brand page-scroll" href="#page-top">Ruben Tan</a> </div>
       
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
