--- a/src/themes/rubentan/layouts/partials/header.html
+++ b/src/themes/rubentan/layouts/partials/header.html
@@ -6,7 +6,7 @@
     {{ partial "meta.html" . }}
 
     <base href="{{ .Site.BaseURL }}">
-    <title>{{ .Site.Title }}</title>
+    <title>{{ .Title }}</title>
     <link rel="canonical" href="{{ .Permalink }}">
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 
